testing solutions for issue with the focus on click on mobile header menu

--- a/app/components/Header.module.scss
+++ b/app/components/Header.module.scss
@@ -24,6 +24,10 @@
 		letter-spacing: 0.2px;
 		border: none;
 		background-color: transparent;
+
+		button:focus {
+			outline: none;
+		}
 	}
 }
 
